[package]
name = "tokenmint"
version = "0.1.0"
authors = ["elaineo <elaine.ou@gmail.com>"]

[dependencies]
bincode = "0.8.0"
emerald-core = { git = "https://github.com/elaineo/emerald-rs"}
hyper = "0.10.9"
hex = "0.2"
nickel = "*"
leveldb = "*"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
plugin = "0.2.6"
typemap = "0.3.3"
time = "0.1"
gethrpc = { path = './gethrpc' }
shapeshift = { path = './shapeshift' }